--- a/导航栏的滑动效果.md
+++ b/导航栏的滑动效果.md
@@ -81,3 +81,13 @@
 
  
  ```
+ 
+>获取视口的宽度，视口的高度： document.body.clientwidth  document.body.clientheight
+>  
+>使用 touch事件获取到触摸点距离左边视口的距离，使用  let left = e.touches[0].pageX
+>  
+>使用触摸事件的时候使用兼容性  ： e = e || event  
+>  
+
+### 关于使用或 （||） 的符号
+ 
