--- a/导航栏的滑动效果.md
+++ b/导航栏的滑动效果.md
@@ -90,4 +90,49 @@
 >  
 
 ### 关于使用或 （||） 的符号
+使用  ||  的符号要和 使用 && 的符号一起来进行使用讲解
+在使用这两种操作符的时候，我们要记住一点
+>这并非像逻辑运算符，这两个操作符返回的并不是TRUE或者 false ，他们的返回值是两个操作数中的一个（且仅一个） 返回的是两个操作符中的一个
+>
+使用 || 或者 && 操作符的不同在于，  
+使用 || 如果条件判断为 true ,返回第一个操作数的值  
+使用 && 如果条件判断为true，返回的是第二个操作数得值  
+代码如下：
+```
+var a = 32;
+var b = 42;
+console.log(a || b) // 32
+console.log(a && b) // 42`
+```
+代码如上：
+
+使用操作符在实际代码中的使用：
  
+1.实现默认值
+我们知道在 es6 中的箭头函数中我们可以实现对于函数参数的默认赋值，我们只要在箭头函数中使用   
+` (a=23) => {}` 这种方法就可以了，但是我们如果不是用箭头函数进行默认值操作呢？我们使用下面这种的方法：  
+使用 || 来执行默认值操作，因为这个的符号的规则是如果一个操作符不存在，选择第二个：  
+```
+function foo (a,b) {
+        a = a || 'hello';
+        b = b || 'good';
+        console.log(a + "  " + b)
+}
+foo ();
+// 'hello world'
+```
+注意，使用这种方法要注意假值的情况：
+>什么是假值  
+>  
+假值是可以被强制类型转换转化为  false 的值
+对于假值，我们有下面的几个假植：  
+`undefined null false +0 -0 NAN  ""(重要的) `
+在使用价值的时候要注意：使用 || 定义的默认值会出问题的：
+
+例如上面的代码中：
+
+```
+foo ("")
+//  hello world
+```
+如是：
