Update and rename 导航栏的滑动效果.md to 导航栏的滑动效果，|| 和 && 操作符.md

--- a/导航栏的滑动效果，|| 和 && 操作符.md
+++ b/导航栏的滑动效果，|| 和 && 操作符.md
@@ -136,3 +136,17 @@ foo ("")
 //  hello world
 ```
 如是：
+
+*我们还要注意的一点是，在js 中 1 不等于 true 0 不等于 false 但是使用的时候使用强制类型转换会将 1 转化为 true  0 转化为 false*
+实际上：
+
+```
+console.log(1 === true ) //  false
+```
+因为强制类型转换的原因： 
+
+````
+console.log ( 0 || 12 ) // 12
+console.log( 1 || 23)  // 23
+console.log (0 || 23 ) // 23
+```
